--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,20 +2,28 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 input {
   font-size: 1rem;
-  color: black;
+  color: darkgrey;
   height: 50px;
-  width: 120px;
-  border: 1px solid black;
-  width: 200px;
+  width: 100%;
+  border: 0;
   border-radius: 2px;
   padding: 10px;
-  margin-right: 10px;
+  text-align: center;
 }
 
 input:focus {
@@ -23,5 +31,19 @@ input:focus {
 }
 
 p {
-  margin: 0;
+  font-size: .9rem;
+  margin: 0 0 .4rem;
+  text-align: center;
+}
+
+.container {
+  width: 300px;
+  box-shadow: 0 0 20px 8px rgba(0, 0, 0, .1);
+  border-radius: 4px;
+  padding: 2rem;
+  position: relative;
+}
+
+.error {
+  color: rgb(230, 98, 98);
 }
